# auto-damper

./: .gitignore  CLAUDE.md  CMakeLists.txt  Taskfile.dist.yml  app.overlay  bt_firmware_pico.hcd  prj.conf  sections-rom.ld  sysbuild.conf
.github/workflows/: release.yml
boards/: rpi_pico2_rp2350a_m33_w.overlay
docs/: apk-security-audit.md  byd-ble-protocol.md  cc-ble-protocol.md  cyw43-bt-hci-bringup.md  issue-bt-firmware-blob.md  porting-to-other-mcus.md  rest-api.md
docs/plans/: 2026-05-07-ble-heater-integration.md  2026-05-07-wifi-json-api.md
include/auto_damper/: config.h  damper.h  heater.h  light.h  ota.h  positions.h  targets.h  wifi.h  wifi_config.h  zbus.h
src/: damper.c  heater_ble.c  heater_byd.c  heater_cc.c  http_api.c  light.c  main.c  ota.c  positions.c  shell.c  targets.c  web_static.c  websocket.c
src/config/: nvs_storage.c  wifi_config.c
src/network/: wifi.c
sysbuild/: mcuboot.conf  mcuboot.overlay
web-src/: index.html  package-lock.json  package.json  vite.config.ts
web-src/src/: App.tsx  index.tsx  styles.css  ws.ts
